Fix HUD, book and regressions